gitops/apps/prowlarr/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  labels:
    app: prowlarr
    part-of: prowlarr
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
      annotations:
        backup.velero.io/backup-volumes: config
    spec:
      containers:
        - name: prowlarr
          image: ghcr.io/linuxserver/prowlarr:2.6.5-nightly
          resources:
            requests:
              memory: 256Mi
              cpu: 100m
            limits:
              memory: 800Mi
              cpu: 1
          ports:
            - name: prowlarr
              containerPort: 9696
          volumeMounts:
            - name: config
              mountPath: /config
          readinessProbe:
            tcpSocket:
              port: prowlarr
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: prowlarr
            initialDelaySeconds: 15
            periodSeconds: 20
          lifecycle:
            postStart:
              exec:
                command:
                  - sh
                  - -c
                  - while [ ! -f /config/config.xml ]; do echo "Waiting for config.xml creation..."; sleep 1; done; sed -i "s/<AuthenticationMethod>.*<\/AuthenticationMethod>/<AuthenticationMethod>$AUTHENTICATION_METHOD<\/AuthenticationMethod>/g" /config/config.xml; sed -i "s/<ApiKey>.*<\/ApiKey>/<ApiKey>$API_KEY<\/ApiKey>/g" /config/config.xml
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: config
