gitops/apps/prowlarr/flaresolverr.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: flaresolverr
  labels:
    app: flaresolverr
    part-of: prowlarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flaresolverr
      part-of: prowlarr
  template:
    metadata:
      labels:
        app: flaresolverr
        part-of: prowlarr
    spec:
      containers:
        - name: flaresolverr
          image: ghcr.io/thephaseless/byparr:latest
          ports:
            - name: flaresolverr
              containerPort: 8191
