gitops/apps/prowlarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
  annotations:
    cert-manager.io/cluster-issuer: bealv
spec:
  rules:
    - host: prowlarr.bealv.lan
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: prowlarr
                port:
                  number: 9696
          - path: /
            pathType: Prefix
            backend:
              service:
                name: oauth2-proxy
                port:
                  number: 80
  tls:
    - hosts:
        - prowlarr.bealv.lan
      secretName: tls-prowlarr
